# z-dev-toolbox

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json
.github/scripts/: parse-release-tag.sh
.github/workflows/: ci.yml  docker-publish.yml  github-release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  platform-bridge.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/extension/: background.ts  options.tsx  package.json  tailwind.config.js  tsconfig.json
apps/extension/src/: extension-app.tsx
apps/web/: index.html  package.json  tailwind.config.cjs
apps/web/src/: App.tsx
release-notes/: README.md  v1.0.0.md  v1.0.1.md  v1.0.10.md  v1.0.11.md  v1.0.12.md  v1.0.13.md  v1.0.14.md  v1.0.15.md  v1.0.16.md  v1.0.17.md  v1.0.18.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.0.8.md  v1.0.9.md
scripts/: check-public-repo.mjs  generate-updater-manifest.mjs  normalize-release-assets.mjs  package-distributables.mjs  prepare-desktop-release-assets.mjs  sync-brand-assets.mjs  sync-versions.mjs  write-tauri-release-config.mjs
store-assets/: PRIVACY.md
