[package]
name = "z-dev-toolbox"
version = "1.0.13"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
